...
    id: 'finalFightingArt',
    name: 'Final Fighting Art',
    imageUrl: 'https://imgur.com/BBrvhhy.png',
  },
  {
    id: 'language',
    name: 'Language',
    unlocks: [
      'ammonia',
      'drums',
      'hovel',
      'innerLantern',
      'paint',
...
    id: 'catarium',
    name: 'Catarium',
    imageUrl: 'https://imgur.com/QMO8iO8.png',
  },
  {
    id: 'lanternHoard',
    name: 'Lantern Hoard',
    imageUrl: 'https://imgur.com/GzulTR1.png',
  },
  {
    id: 'exhaustedLanternHoard',
    name: 'Exhausted Lantern Hoard',
    imageUrl: 'https://imgur.com/qg2Ik38.png',
...
